--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         <div class="bottom__foot">
                             <div class="foot__start">
                                 <img src="imges/Post/Post/Post/Shape.png" alt="Like" />
-                                <img src="imges/Post/Post/Post/Shape.png" alt="Comment" />
-                                <img src="imges/Post/Post/Post/Shape.png" alt="Share" />
+                                <img src="imges/Comment.svg" alt="Comment" />
+                                <img src="imges/Messanger.svg" alt="Share" />
                             </div>
                             <img src="imges/Post/Pagination.png" height="4" alt="Pagination" />
                             <img src="imges/Post/Post/Post/Post/Post/Post/Shape.png" alt="Save" />
@@ -83,8 +83,8 @@
                         <div class="bottom__foot">
                             <div class="foot__start">
                                 <img src="imges/Post/Post/Post/Shape.png" alt="Like" />
-                                <img src="imges/Post/Post/Post/Shape.png" alt="Comment" />
-                                <img src="imges/Post/Post/Post/Shape.png" alt="Share" />
+                                <img src="imges/Comment.svg" alt="Comment" />
+                                <img src="imges/Messanger.svg" alt="Share" />
                             </div>
                             <img src="imges/Post/Pagination.png" height="4" alt="Pagination" />
                             <img src="imges/Post/Post/Post/Post/Post/Post/Shape.png" alt="Save" />
@@ -126,8 +126,8 @@
                         <div class="bottom__foot">
                             <div class="foot__start">
                                 <img src="imges/Post/Post/Post/Shape.png" alt="Like" />
-                                <img src="imges/Post/Post/Post/Shape.png" alt="Comment" />
-                                <img src="imges/Post/Post/Post/Shape.png" alt="Share" />
+                                <img src="imges/Comment.svg" alt="Comment" />
+                                <img src="imges/Messanger.svg" alt="Share" />
                             </div>
                             <img src="imges/Post/Pagination.png" height="4" alt="Pagination" />
                             <img src="imges/Post/Post/Post/Post/Post/Post/Shape.png" alt="Save" />
@@ -169,8 +169,8 @@
                         <div class="bottom__foot">
                             <div class="foot__start">
                                 <img src="imges/Post/Post/Post/Shape.png" alt="Like" />
-                                <img src="imges/Post/Post/Post/Shape.png" alt="Comment" />
-                                <img src="imges/Post/Post/Post/Shape.png" alt="Share" />
+                                <img src="imges/Comment.svg" alt="Comment" />
+                                <img src="imges/Messanger.svg" alt="Share" />
                             </div>
                             <img src="imges/Post/Pagination.png" height="4" alt="Pagination" />
                             <img src="imges/Post/Post/Post/Post/Post/Post/Shape.png" alt="Save" />
